Created documentation for MedicalCares
