# backend/src/modules/medicalCares/infra/http/routes/medicalCares.routes.ts
@@ -1,4 +1,5 @@
 import ensureAuthenticated from '@modules/users/infra/http/middlewares/ensureAuthenticated';
+import { celebrate, Joi, Segments } from 'celebrate';
 import { Router } from 'express';
 import MedicalCaresController from '../controllers/MedicalCaresController';
 
@@ -7,6 +8,17 @@ const medicalCaresController = new MedicalCaresController();
 
 medicalCaresRouter.use(ensureAuthenticated);
 
-medicalCaresRouter.post('/', medicalCaresController.create);
+medicalCaresRouter.post(
+    '/',
+    celebrate({
+        [Segments.BODY]: {
+            date: Joi.date(),
+            client_id: Joi.string().uuid().required(),
+            specialist_id: Joi.string().uuid().required(),
+            status: Joi.string(),
+            amount: Joi.number(),
+        },
+    }),
+    medicalCaresController.create);
 
 export default medicalCaresRouter;
